--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </description>
     <groupId>com.atex.plugins</groupId>
     <artifactId>custom-html-page-layout</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <parent>
@@ -69,7 +69,7 @@
     <scm>
         <developerConnection>scm:git:git@github.com:atex-community-plugins/custom-html-page-layout.git</developerConnection>
         <url>https://github.com/atex-community-plugins/custom-html-page-layout</url>
-        <tag>HEAD</tag>
+        <tag>custom-html-page-layout-1.0</tag>
     </scm>
     
     <properties>
